# langchain-examples

1-model-io/: chat-model0.py  output-parser-pydantic0.py  output-parser0.py  output-parser1.py  prompt-template0.py
1_model_io/: chat_model0.py  output_parser0.py  prompt_serialization.py  prompt_template0.py  simple_prompt.json
2_retrieval/: document-loader0.py  document_loader0.py  document_loader1.py  document_transformer.py  intergration0.py  multi_query.py  multi_query_web.py  pyproject.toml  sample.html  text_embedding.py  vector_store.py
2_retrieval/phone_db/a168a50f-3389-4951-b661-5602f3466a43/: index_metadata.pickle
2_retrieval/pokemon_db/b7ae4707-d541-4f55-a64f-17f0e24baa3a/: index_metadata.pickle
3_lcel/: lcel0.py  lcel_function_call.py  rag_faiss.py  runnable0.py
3_lcel/stock_faiss_index/: index.faiss  index.pkl
4_memory/: memory_secretary.py  memory_fortune_teller.py  memory_secretary1.py
5_lang_serve/: main.py  pyproject.toml
6_mcp/: README.md  fastapi_server.py  main.py  pyproject.toml  test_api.py
7_lang_graph/: .gitignore  checkpoints.sqlite  pyproject.toml  rap_battle_chatbot_with_memory.py
8_lang_graph/: chatbot_with_memory_sqlite.py  pyproject.toml
9-lang-graph/: main.py  simple-chatbot0.py
