[project]
name = "9-lang-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.26",
    "langgraph>=0.4.10",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "python-dotenv>=1.0.0",
]
